@@ -1,4 +1,5 @@
 v 6.3.0
+  - API for adding gitlab-ci service
   - Init script now waits for pids to appear after (re)starting before reporting status (Rovanion Luckey)
   - Restyle project home page
   - Grammar fixes
